--- a/Novice_Motorist/Guid/Form_Glava_1_Introduction.resx
+++ b/Novice_Motorist/Guid/Form_Glava_1_Introduction.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Для начала, хочу сразу расставить все точки над ё: я прекрасно понимаю что мой опыт владения авто является мизерным, и многих вещей я не знаю. Но, поверьте, даже такой опыт крайне сильно отличается от того, который был у меня год назад. И этот опыт сильно помог бы мне год назад.</value>
+  </data>
 </root>
