--- a/Novice_Motorist/Guid/Form_Glava_3_Fuel.resx
+++ b/Novice_Motorist/Guid/Form_Glava_3_Fuel.resx
@@ -117,13 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label1.Text" xml:space="preserve">
-    <value>Для начала, хочу сразу расставить все точки над ё: я прекрасно понимаю что мой опыт владения авто является мизерным, и многих вещей я не знаю. Но, поверьте, даже такой опыт крайне сильно отличается от того, который был у меня год назад. И этот опыт сильно помог бы мне год назад.</value>
-  </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value>Данное приложение помогает при выборе первого автомобиля, а так же для получения новой информации об автомобилях, их строении и о компаниях которые их выпускают.
-
- Это приложение так же будет полезно автолюбителям, которые уже имеют свой автомобиль.</value>
+  <data name="label5.Text" xml:space="preserve">
+    <value>С момента появления автомобильных двигателей внутреннего сгорания и до сих пор для них используются продукты нефтепереработки: бензин и дизельное топливо. И то, и то – смесь углеводородов с присадками. Разница только в отдельных характеристиках и температурном режиме. От 35 до 2000 граС момента появления автомобильных двигателей внутреннего сгорания и до сих пор для них используются продукты нефтепереработки: бензин и дизельное топливо. И то, и то – смесь углеводородов с присадками. Разница только в отдельных характеристиках и температурном режиме. От 35 до 2000 градусов для бензина и от 180 до 3600 – для дизеля.дусов для бензина и от 180 до 3600 – для дизеля.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
