--- a/Novice_Motorist/Properties/Resources.resx
+++ b/Novice_Motorist/Properties/Resources.resx
@@ -133,16 +133,25 @@
   <data name="Button_Hide_Move" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Hide_Move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_auto_volkswagen_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\1x\logo_auto_volkswagen_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Button_Exite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Button_Exite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Logotype" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Logotype.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="novicedriver_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\novicedriver_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Button_Exite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Button_Exite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="carbody" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\carbody.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bg_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\bg_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="types_body_cars" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\types_body_cars.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
