--- a/Novice_Motorist/Guid/Form_Glava_3_Fuel.resx
+++ b/Novice_Motorist/Guid/Form_Glava_3_Fuel.resx
@@ -118,7 +118,31 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="label5.Text" xml:space="preserve">
-    <value>С момента появления автомобильных двигателей внутреннего сгорания и до сих пор для них используются продукты нефтепереработки: бензин и дизельное топливо. И то, и то – смесь углеводородов с присадками. Разница только в отдельных характеристиках и температурном режиме. От 35 до 2000 граС момента появления автомобильных двигателей внутреннего сгорания и до сих пор для них используются продукты нефтепереработки: бензин и дизельное топливо. И то, и то – смесь углеводородов с присадками. Разница только в отдельных характеристиках и температурном режиме. От 35 до 2000 градусов для бензина и от 180 до 3600 – для дизеля.дусов для бензина и от 180 до 3600 – для дизеля.</value>
+    <value>С момента появления автомобильных двигателей внутреннего сгорания и до сих пор для них используются продукты нефтепереработки: бензин и дизельное топливо. И то, и то – смесь углеводородов с присадками. Разница только в отдельных характеристиках и температурном режиме. От 35 до 2000 градусах.С момента появления автомобильных двигателей внутреннего сгорания и до сих пор для них используются продукты нефтепереработки: бензин и дизельное топливо. И то, и то – смесь углеводородов с присадками. Разница только в отдельных характеристиках и температурном режиме. От 35 до 2000 градусов для бензина и от 180 до 3600 – для дизеля.дусов для бензина и от 180 до 3600 – для дизеля.</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Бензин:
+Бензин – легкокипящие жидкие углеводороды.
+Основной критерий – детонационная стойкость, которая характеризуется октановым числом.
+Важный критерий бензина - это степень сжатия. Чем она выше – тем выше мощность двигателя, но и больше расход топлива. Важно, чтобы степень сжатия и октановое число равны были между собой.
+Фракционный состав бензина напрямую влияет на пуск двигателя, прогрев, экономичность, долговечность и отсутствие паровых пробок. Исходя из этого, бензины классифицируют на зимние и летние: адаптированные под конкретные температурные условия.
+</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Дизель:
+Дизельное топливо по старинке иногда называют соляркой. Название происходит от немецкого Solaröl – солнечное масло. Дизельное топливо – тяжелая фракция, образующаяся при перегонке нефти.
+Для дизельного мотора, помимо экологического класса, важна и температура замерзания. Существует летнее дизтопливо и зимнее  и арктическое.
+Практика показывает, что последние годы АЗС следят за качеством. По крайней мере, сетевые станции не позволяют себе торговать топливом, которое становится вязким при низких температурах. В дальние поездки опытные водители берут с собой присадки-антигели, использование которых обеспечивает беспроблемную эксплуатацию дизельного двигателя.</value>
+  </data>
+  <data name="label6.Text" xml:space="preserve">
+    <value>Альтернативные виды:
+Во всем мире растет интерес к альтернативным видам автомобильного топлива: более экономичным, экологичным и эффективным. Они производятся из неисчерпаемых запасов и создают меньше выбросов в атмосферу.
+Вот некоторые из них:</value>
+  </data>
+  <data name="label7.Text" xml:space="preserve">
+    <value>Природный газ -  доступен практически повсеместно, выделяет меньше токсичных веществ, чем бензин или дизель, полностью сгорает при использовании.
+Электричество - электрокары на аккумуляторах совершенствуются с каждым годом. Для зарядки они подключаются к источнику питания. Электрохимическая реакция в двигателе не загрязняет окружающую среду.
+Водород - он используется в системах с природным газом и электрических топливных элементах.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
