Mix Update From and Added Form_Glava_5

--- a/Novice_Motorist/Guid/Form_Glava_4_Power.resx
+++ b/Novice_Motorist/Guid/Form_Glava_4_Power.resx
@@ -122,4 +122,36 @@
 -С карбюратором.
 -Инжекторного типа.</value>
   </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Карбюраторная система впрыска
+Карбюратор — это тип впрыскового устройства горючего во впускной коллектор с дальнейшим распределением по цилиндрам.
+Карбюраторы бывают — одно-, двух-, четырех- и шестикамерные. Кроме этого существует достаточно много прототипов.
+Недостатком карбюратора стало то, что он чувствительный к регулировкам, а также не соответствует экологическим международным нормам.</value>
+  </data>
+  <data name="label6.Text" xml:space="preserve">
+    <value>Инжектор
+Инжекторный двигатель — это тип впрыскового устройства горючего в цилиндры двигателя. Инжекторный впрыск бывает моно и разделённым Данная система на сегодняшний день все больше совершенствуется, чтобы уменьшит выбросы СО2 в атмосферу. Для впрыска используются форсунки, которые ещё ранее начали использоваться на дизельных двигателях.
+С переходом на данную систему транспортные средства стали оснащать электронными блоками управления двигателем, чтобы корректировать состав воздушно-топливной смеси, а также сигнализировать о неисправностях внутри системы.</value>
+  </data>
+  <data name="label7.Text" xml:space="preserve">
+    <value>Дизельные двигатели
+Дизельный мотор — это вид двигателя, который расходует как горючее дизельное топливо. Основные системы и элементы движка идентичны бензиновому брату, различие состоит в системе впрыска и воспламенении смеси. В дизельном моторе отсутствуют свечи зажигания, поскольку воспламенение смеси от искры не нужно.
+На моторах такого типа устанавливаются свечи накала, которые разогревают воздух в камере сгорания, который превышает температуру воспламенения. После этого через форсунки подаётся распылённое топливо, которое сгорает, чем создаёт достаточное давление для привода в движения поршня, который раскручивает коленчатый вал.</value>
+  </data>
+  <data name="label9.Text" xml:space="preserve">
+    <value>Газовый двигатель
+Газовые двигатели на сегодняшний день в автоиндустрии в чистом виде почти не используются, поскольку частые поломки моторов, стали причиной полного отказа от них. Вместо этого, газовые установки зачастую можно встретить на бензиновых автомобилях, что значительно экономит расход денег на горючее.
+Газ с баллона подаётся на редуктор, который распределяет топливо по цилиндрам, а затем горючее попадает непосредственно в камеры сгорания. После этого с помощью свечей зажигания газ воспламеняется. Единственным недостатком использования газовой установки считается то, что мотор теряет 20% своего потенциального ресурса.</value>
+  </data>
+  <data name="label11.Text" xml:space="preserve">
+    <value>Электрические моторы
+Николас Тесла впервые предложил использовать для автомобилей электроэнергию. Электрические моторы на сегодняшний день не распространены, поскольку заряда батареи хватает только до 200 км пути, а заправочных станций, которые могут предоставить услугу зарядки автомобиля — практически нет.
+Известная мировая компания, производитель электрических автомобилей «Тесла» продолжает совершенствовать электродвигатели, и каждый год дарит потребителям новинки, которые имеют больший запас хода без дозарядки.</value>
+  </data>
+  <data name="label12.Text" xml:space="preserve">
+    <value>Гибриды
+Наверное, самые желаемые двигатели на сегодняшний день. Это смесь бензинового двигателя внутреннего сгорания и электромотора. Существует несколько вариантов работы такого движка.
+Мотор может работать на попеременном питании. Сначала движение производится на бензине, пока генератор заряжает батарею, а затем водитель может переключиться на электропитание.
+Двигатель и электромотор работают одновременно, что помогает сэкономить расход горючего на одно, и тоже расстояние с другими типами ДВС.</value>
+  </data>
 </root>
