--- a/Novice_Motorist/Properties/Resources.resx
+++ b/Novice_Motorist/Properties/Resources.resx
@@ -118,8 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Button_Back_Move" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Button_Back_Move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="brand_mits" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\1x\1x\brand_mits.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Golf_Alltrack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Golf_Alltrack.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Button_Exite_Move" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Exite_Move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -127,17 +130,14 @@
   <data name="carbody" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\carbody.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="brand_chev" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\1x\1x\brand_chev.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Button_Hide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Button_Hide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="brand_kia" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\1x\1x\brand_kia.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bg_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\bg_image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Button_Back" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Button_Back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Button_Hide_Move" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Button_Hide_Move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,14 +148,20 @@
   <data name="picture_parking_device" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\picture_parking_device.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Button_Exite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Button_Exite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Logotype" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\Logotype.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="brand_mits" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\1x\1x\brand_mits.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Atlass_Cross_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Atlass_Cross_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Button_Hide" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Button_Hide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Button_Back" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Button_Back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="brand_chev" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\1x\1x\brand_chev.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="brand_ford" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\1x\1x\brand_ford.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,13 +169,19 @@
   <data name="types_body_cars" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\types_body_cars.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Atlass_Cross" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Atlass_Cross.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="novicedriver_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\novicedriver_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Button_Exite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Image\1x\Button_Exite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Button_Back_Move" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Button_Back_Move.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="brand_citr" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Image\1x\1x\1x\brand_citr.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Golf_Alltrack_Interier" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Image\1x\Golf_Alltrack_Interier.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
